--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,23 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.0.M1 (2020-01-16)
+----------------------------------------
+* DATAGRAPH-1280 - Upgrade to Neo4j OGM 3.2.5.
+* DATAGRAPH-1278 - Update license header to extend to 2020.
+* DATAGRAPH-1276 - Explicitly Pass READ_ONLY mode to Session.query.
+* DATAGRAPH-1275 - Verify update of relationship entities.
+* DATAGRAPH-1274 - Don't rely on Neo4j-OGM failing with NPE in tests.
+* DATAGRAPH-1271 - Fix invalid class lookup for @QueryResults.
+* DATAGRAPH-1269 - Upgrade to Neo4j OGM 3.2.3.
+* DATAGRAPH-1268 - Remove usage of deprecated Filter#setPropertyName..
+* DATAGRAPH-1265 - Enable JDK 11+ builds.
+* DATAGRAPH-1259 - Migrate tests to AssertJ.
+* DATAGRAPH-1257 - Release 5.3 M1 (Neumann).
+* DATAGRAPH-1207 - Adjust log level in MetaDataDrivenConversionService.
+* DATAGRAPH-1143 - Fix ClassCastException during instantiation from results containing arrays.
+
+
 Changes in version 5.2.4.RELEASE (2020-01-15)
 ---------------------------------------------
 * DATAGRAPH-1280 - Upgrade to Neo4j OGM 3.2.5.
@@ -1626,6 +1643,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
