--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.0.M2 (2020-01-17)
+----------------------------------------
+* DATAGRAPH-1284 - Release 5.3 M2 (Neumann).
+
+
 Changes in version 5.3.0.M1 (2020-01-16)
 ----------------------------------------
 * DATAGRAPH-1280 - Upgrade to Neo4j OGM 3.2.5.
@@ -1643,6 +1648,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
