--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.0.M3 (2020-02-12)
+----------------------------------------
+* DATAGRAPH-1289 - Upgrade to Neo4j OGM 3.2.8.
+* DATAGRAPH-1288 - Inherit Spring Data Build-managed Checkstyle version.
+* DATAGRAPH-1286 - Support generated ids in derived finder methods.
+* DATAGRAPH-1285 - Release 5.3 M3 (Neumann).
+* DATAGRAPH-1241 - Lack of named count queries support.
+
+
 Changes in version 5.3.0.M2 (2020-01-17)
 ----------------------------------------
 * DATAGRAPH-1284 - Release 5.3 M2 (Neumann).
@@ -1648,6 +1657,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
