--- a/README.adoc
+++ b/README.adoc
@@ -1,14 +1,15 @@
 = Spring Data Neo4j⚡️RX
 :sectanchors:
 
-// tag::versions[]
-:spring-data-neo4j-rx_version: 1.0.0-beta03
+// tag::properties[]
 :groupId: org.neo4j.springframework.data
 :artifactId: spring-data-neo4j-rx
 :artifactIdStarter: spring-data-neo4j-rx-spring-boot-starter
-:neo4j_version: 4.0.0
-:spring-boot_version: 2.2.4.RELEASE
-// end::versions[]
+
+:neo4j-version: 4.0.0
+:spring-boot-version: 2.2.4.RELEASE
+:spring-data-neo4j-rx-version: 1.0.0-beta03
+// end::properties[]
 
 image:https://img.shields.io/maven-central/v/org.neo4j.springframework.data/spring-data-neo4j-rx.svg[Maven Central,link=http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22org.neo4j.springframework.data%22%20AND%20a%3A%22spring-data-neo4j-rx%22]
 
@@ -25,7 +26,7 @@ The SDN/RX project aims to provide a familiar and consistent Spring-based progra
 == Manual
 
 For a gentle introduction and some getting started guides, please use our
-link:docs/manual.adoc[Manual].
+link:docs/index.adoc[Manual].
 
 == Getting Started
 
@@ -98,7 +99,7 @@ Add the Maven dependency:
 <dependency>
 	<groupId>{groupId}</groupId>
 	<artifactId>{artifactId}</artifactId>
-	<version>{spring-data-neo4j-rx_version}</version>
+	<version>{spring-data-neo4j-rx-version}</version>
 </dependency>
 ----
 
