--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data Neo4j Changelog
 ===========================
 
+Changes in version 5.3.0.M4 (2020-03-11)
+----------------------------------------
+* DATAGRAPH-1299 - Remove usage of deprecated Neo4j-OGM API.
+* DATAGRAPH-1295 - Upgrade to Neo4j OGM 3.2.9.
+* DATAGRAPH-1294 - Improve Docs in regards of OpenSessionInViewFilter.
+* DATAGRAPH-1291 - Release 5.3 M4 (Neumann).
+* DATAGRAPH-1290 - Add case insensitive order support for custom queries.
+
+
 Changes in version 5.2.5.RELEASE (2020-02-26)
 ---------------------------------------------
 * DATAGRAPH-1295 - Upgrade to Neo4j OGM 3.2.9.
@@ -1677,6 +1686,7 @@ General
 * Support for building traversal descriptions
 * Support for cross-store persistence including basic transaction support
 * Abstract configuration class
+
 
 
 
